fix: fix make section texts more readable

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@
   --text-color-greenish: #244720;
   --text-color-dark: #333;
   --overlay-color: rgba(0, 0, 0, 0.4);
-  --glass-bg: rgba(255, 255, 255, 0.35);
+  --glass-bg: rgb(100 100 100 / 15%);
   --placeholder-color: #bbb;
   --accent-color: #00695c;
   --testimonial-background-color1: #f3f8f7;
